// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressTable should render 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressTable"
  >
    <div
      class="flex items-center py-5 space-x-4"
    >
      <div
        aria-label="ARK Devnet"
        class="sc-AxhUy iDenJW border-theme-primary-100 text-theme-primary-400"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-AxjAm buCJuk"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
      <div
        class="flex"
      >
        <h2
          class="mb-0 text-2xl font-bold"
        >
          ARK Devnet
        </h2>
        <span
          class="ml-2 text-2xl font-bold text-theme-neutral-500 dark:text-theme-neutral-700"
        >
          1
        </span>
      </div>
    </div>
    <div
      class="sc-AxirZ jhHiEf -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  My Address
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Wallet Type
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end"
              >
                <div>
                  Balance
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top ml-15"
              >
                <div>
                  Delegate
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Rank
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Profile
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold  "
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center no-border"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--7"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="sc-AxhCb jCOJxD group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxiKw lptRhd space-x-4"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    ARK Wallet 1
                  </span>
                  <span
                    class="sc-AxgMl fFPQpl text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    D8rr7B … s6YUYD
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw kzuWLv justify-center text-sm font-bold text-center align-middle"
              >
                <div
                  class="inline-flex items-center space-x-2"
                />
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw kzuWLv justify-end font-bold text-theme-secondary-text whitespace-no-wrap"
              >
                <span
                  data-testid="Amount"
                >
                  33.75089801 DARK
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw kzuWLv space-x-4 font-bold"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                      title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    />
                  </div>
                </div>
                <span>
                  arkx
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw kzuWLv justify-center font-bold text-theme-secondary-text"
              >
                <span>
                  #
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw kzuWLv justify-center"
              >
                <div
                  class="sc-AxjAm cpczEI text-xl text-theme-primary"
                  data-testid="AddressRow__profile"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw kzuWLv justify-center"
              >
                <div
                  class="sc-AxjAm jmgDQY text-theme-success"
                  data-testid="AddressRow__status"
                  height="22"
                  width="22"
                >
                  <svg>
                    status-ok.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw jYnXjB justify-end"
              >
                <button
                  class="sc-AxheI iqbCVU"
                  data-testid="AddressRow__select-0"
                  type="button"
                >
                  Vote
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressTable should render when the maximum votes is greater than 1 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressTable"
  >
    <div
      class="flex items-center py-5 space-x-4"
    >
      <div
        aria-label="ARK Devnet"
        class="sc-AxhUy iDenJW border-theme-primary-100 text-theme-primary-400"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-AxjAm buCJuk"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
      <div
        class="flex"
      >
        <h2
          class="mb-0 text-2xl font-bold"
        >
          ARK Devnet
        </h2>
        <span
          class="ml-2 text-2xl font-bold text-theme-neutral-500 dark:text-theme-neutral-700"
        >
          1
        </span>
      </div>
    </div>
    <div
      class="sc-AxirZ jhHiEf -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  My Address
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Wallet Type
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end"
              >
                <div>
                  Balance
                </div>
                <div
                  class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Delegates
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold  "
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top no-border"
              >
                <div>
                  Votes
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="sc-AxhCb jCOJxD group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxiKw lptRhd space-x-4"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    ARK Wallet 1
                  </span>
                  <span
                    class="sc-AxgMl fFPQpl text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    D8rr7B … s6YUYD
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw kzuWLv justify-center text-sm font-bold text-center align-middle"
              >
                <div
                  class="inline-flex items-center space-x-2"
                />
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw kzuWLv justify-end font-bold text-theme-secondary-text whitespace-no-wrap"
              >
                <span
                  data-testid="Amount"
                >
                  33.75089801 DARK
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw kzuWLv space-x-4 font-bold"
              >
                <div
                  class="flex items-center h-11"
                >
                  <div
                    class="flex -space-x-3"
                  >
                    <span
                      class="inline-block"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                            title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                          />
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw kzuWLv"
              >
                <div
                  class="font-bold text-theme-neutral-light"
                >
                  <span
                    class="text-theme-secondary-text"
                  >
                    1
                  </span>
                  <span>
                    /10
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw jYnXjB justify-end"
              >
                <button
                  class="sc-AxheI iqbCVU"
                  data-testid="AddressRow__select-0"
                  type="button"
                >
                  Vote
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
